retirada do blog

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ follow @wesleyclzns in ALL </div>
                             <span style="display:block;">gitfolio</span>
                             </div>
                             <div class="bottom_section">
-                                <span style="display:none;"><i class="fas fa-code"></i>&nbsp; null</span>
+                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
                                 <span><i class="fas fa-star"></i>&nbsp; 0</span>
                                 <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
                             </div>
@@ -356,35 +356,9 @@ follow @wesleyclzns in ALL </div>
                         </section>
                         </a></div>
         </div>
-        <div id="forks" style="display: block;">
+        <div id="forks" style="display:none;">
             <h1>Forks.</h1>
-            <div class="projects" id="forks_section">
-                            <a href="https://github.com/wesleyclzns/horoscope-pt_BR" target="_blank">
-                            <section>
-                                <div class="section_title">horoscope-pt_BR</div>
-                                <div class="about_section">
-                                <span style="display:block;">horoscope &amp; zodiac utilities ♈️  ♉️  ♊️  ♋️  ♌️  ♍️  ♎️  ♏️  ♐️  ♑️  ♒️  ♓️ </span>
-                                </div>
-                                <div class="bottom_section">
-                                    <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                    <span><i class="fas fa-star"></i>&nbsp; 1</span>
-                                    <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                                </div>
-                            </section>
-                            </a>
-                            <a href="https://github.com/wesleyclzns/smart-mirror" target="_blank">
-                            <section>
-                                <div class="section_title">smart-mirror</div>
-                                <div class="about_section">
-                                <span style="display:block;">The fairest of them all. A DIY voice controlled smart mirror with IoT integration.</span>
-                                </div>
-                                <div class="bottom_section">
-                                    <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript</span>
-                                    <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                                    <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                                </div>
-                            </section>
-                            </a></div>
+            <div class="projects" id="forks_section"></div>
         </div>
         <div id="blog_section">
             <h1>Blog.</h1>
